<resources>
    <string name="app_name">InstaCopy</string>

    <string name="location_template">%s ></string>

    <plurals name="likes_count">
        <item quantity="one">
            <![CDATA[<b>%d like</b>]]>
        </item>
        <item quantity="other">
            <![CDATA[<b>%d likes</b>]]>
        </item>
    </plurals>

    <string name="liked_by_text">
        <![CDATA[
        Liked by <b>%s</b> and <b>%s</b>
        ]]>
    </string>
    <string name="likes">Likes</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_photo">Add Photo</string>
    <string name="user_profile">User Profile</string>

    <plurals name="liked_by">
        <item quantity="one">%d other</item>
        <item quantity="other">%d others</item>
    </plurals>

    <plurals name="hours_elapsed">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
</resources>
