<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/add_photo"
        android:enabled="true"
        android:icon="@drawable/ic_add_photo"
        android:title="@string/add_photo" />
    <item
        android:id="@+id/likes"
        android:enabled="true"
        android:icon="@drawable/ic_like_unfilled"
        android:title="@string/likes" />
    <item
        android:id="@+id/user_profile"
        android:enabled="true"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/user_profile" />
</menu>